--- a/.github/workflows/cross.yml
+++ b/.github/workflows/cross.yml
@@ -16,12 +16,12 @@ jobs:
           # - i686-pc-windows-gnu  # not supported by cross
           # - i686-pc-windows-msvc  # not supported by cross
           - i686-unknown-linux-gnu
-          - x86_64-apple-darwin
+          # - x86_64-apple-darwin  # proprietary apple stuff
           - x86_64-pc-windows-gnu
           # - x86_64-pc-windows-msvc  # not supported by cross
           - x86_64-unknown-linux-gnu
           ############ Tier 2 with Host Tools
-          - aarch64-apple-darwin
+          # - aarch64-apple-darwin  # proprietary apple stuff
           # - aarch64-pc-windows-msvc  # not supported by cross
           - aarch64-unknown-linux-musl
           - arm-unknown-linux-gnueabi
